--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,9 +29,11 @@ proxies:
   - {"name":"❔XX | 🔴 | vless | @prrofile_purple | 143","type":"vless","server":"rep.tr.xpnvip.ir","port":2689,"udp":false,"uuid":"fa695024-dff5-47c0-8976-64b963236c22","tls":false,"servername":"tgju.org","network":"grpc","grpc-opts":{"grpc-service-name":"nama"},"reality-opts":{"public-key":"L4WAAdlTv7i2tDZwPcvYrCfZg2IDCI_sp5LElu3u91U","short-id":"b6c24852f86067a6","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 1","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇸🇬SG | 🟢 | vless | @ConfigsHUB | 3","type":"vless","server":"amazon-4.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🔴 | vless | @ConfigsHUB | 8","type":"vless","server":"91.98.76.73","port":2052,"udp":false,"uuid":"797d8132-6c08-4d5f-accc-eba1d6fdc9c5","tls":false,"servername":"cp7.cloudflare.com","network":"xhttp","reality-opts":{"public-key":"B4bL5jZotLi91qBuoZjrl5wI4txIa5GmgS2ifinc7VA","short-id":"6a","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇫🇷FR | 🔴 | vless | @ConfigsHUB | 10","type":"vless","server":"80.13.135.11","port":57546,"udp":false,"uuid":"4aae04fa-f390-44bb-9558-a344c8baed36","tls":false,"servername":"ratp.fr","network":"grpc","grpc-opts":{"grpc-service-name":"probrain-etl"},"reality-opts":{"public-key":"G4WqyBonyjuo6n6pIL_yLN33T9e8BNHIUlrVnqZPpTY","short-id":"e9da","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 0","type":"vless","server":"amazon-4.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🔴 | vless | @ConfigsHUB | 4","type":"vless","server":"91.98.76.73","port":2052,"udp":false,"uuid":"797d8132-6c08-4d5f-accc-eba1d6fdc9c5","tls":false,"servername":"cp7.cloudflare.com","network":"xhttp","reality-opts":{"public-key":"B4bL5jZotLi91qBuoZjrl5wI4txIa5GmgS2ifinc7VA","short-id":"6a","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇫🇷FR | 🔴 | vless | @ConfigsHUB | 6","type":"vless","server":"80.13.135.11","port":57546,"udp":false,"uuid":"4aae04fa-f390-44bb-9558-a344c8baed36","tls":false,"servername":"ratp.fr","network":"grpc","grpc-opts":{"grpc-service-name":"probrain-etl"},"reality-opts":{"public-key":"G4WqyBonyjuo6n6pIL_yLN33T9e8BNHIUlrVnqZPpTY","short-id":"e9da","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 11","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇮🇱IL | 🟢 | vless | @ConfigsHUB | 12","type":"vless","server":"ilta-wzxrxkdhbjpnprhkkpplsjwawhssvollvxzdhqshiqckwdgrdm.orbnet.xyz","port":443,"udp":false,"uuid":"0e8a6896-ad90-4a3b-89a3-77d64aa409e2","tls":false,"servername":"i2pd.website","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"YVDo7U4O-AT2fa5H9E7hyYHKgfZd1vB6UdbAf2ggWQE","short-id":"55e6af1a35e64a98","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇦🇱AL | 🟢 | vless | @FreakConfig | 3","type":"vless","server":"al.spirako.com","port":443,"udp":false,"uuid":"f2a4624b-4efc-4409-bf2f-c7ec5f77503a","tls":false,"servername":"spirako.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"0hH6R90pSxwm7nZPGtJJcJFhwCXU3Rvf-wcEHE7hczo","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 5","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -76,9 +78,11 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 1'
-      - '🇸🇬SG | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 8'
-      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 4'
+      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 6'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 11'
+      - '🇮🇱IL | 🟢 | vless | @ConfigsHUB | 12'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 3'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 5'
@@ -123,9 +127,11 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 1'
-      - '🇸🇬SG | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 8'
-      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 4'
+      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 6'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 11'
+      - '🇮🇱IL | 🟢 | vless | @ConfigsHUB | 12'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 3'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 5'
@@ -169,9 +175,11 @@ proxy-groups:
       - '❔XX | 🔴 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 1'
-      - '🇸🇬SG | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 8'
-      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
+      - '🇩🇪DE | 🔴 | vless | @ConfigsHUB | 4'
+      - '🇫🇷FR | 🔴 | vless | @ConfigsHUB | 6'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 11'
+      - '🇮🇱IL | 🟢 | vless | @ConfigsHUB | 12'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 6'
       - '🇦🇱AL | 🟢 | vless | @FreakConfig | 3'
       - '🇳🇱NL | 🟢 | vless | @FreakConfig | 5'
